[package]
name = "tcp-localhost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["macros","rt-multi-thread",] }
clap = { version = "4.4.8", features = ["derive",] }
live-server = "0.6.2"
anyhow = "1.0.75"
notify = "6.1.1"
itertools = "0.12.0"
native-dialog = "0.7.0"
